# ai-ecosystem-radar

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  WEEKLY_DIGEST.md  pyproject.toml  validate_sources.py
.claude/commands/: tdd.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-source.md  bad-tag.md
.github/instructions/: pytest.instructions.md
.github/workflows/: ci.yml  deploy.yml  digest.yml  scrape.yml
data/: feed.json  sources.json  sources.schema.json
data/archive/: 2026-03-17.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  (+68 more)
pipeline/: __init__.py  classify.py  dedup.py  digest.py  run.py  score.py
scrapers/: __init__.py  arxiv.py  base.py  github_trending.py  hackernews.py  reddit.py  rss_blogs.py  twitter_nitter.py
site/: index.html
tests/: conftest.py  test_scrapers.py
